--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     	<meta name="keywords" content="cookies, c, monster, Sesame Street">
     	<meta name="description" content="I love cookies big and small, I love cookies I love them all.">
 
-		<title>Cookie Monster</title>
+		<title> Monster</title>
 		
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -16,7 +16,7 @@
 	<div id="container">
 	<!-- START HERE --> 
 
-	<h1>Cookie Monster</h1>
+	<h1>Cookie Monster Face</h1>
 	<h2>Chocolate Chip Evangelist</h2>
 	
 
