--- a/orders.html
+++ b/orders.html
@@ -96,12 +96,26 @@
   </header>
   <!--/header-->
 
+  <!--Swipe menu for mobile-->
+  <div class="swipe-menu-outer hiddem-above-lg">
+    <div id="maniNavMobile" class="swipe-cat-menu">
+      <li><a href="#">Dashboard</a></li>
+      <li><a href="#" class="current">Orders</a></li>
+      <li><a href="#">Coupons</a></li>
+      <li><a href="#">Payment</a></li>
+      <li><a href="#">Addresses</a></li>
+      <li><a href="#">Account Details</a></li>
+      <li><a href="#">Log Out</a></li>
+    </div>
+  </div>
+  <!--/Swipe menu for mobile-->
+
   
   <!--Main content-->
   <section class="desktop-view-center admin-outer">
     <div class="clearfix">
       <!--left panel-->
-      <aside class="left-panel-menu">
+      <aside class="left-panel-menu hiddem-from-lg">
         <ul class="admin-left-menu">
           <li><a href="#">Dashboard</a></li>
           <li><a href="#" class="active">Orders</a></li>
