--- a/owner.html
+++ b/owner.html
@@ -147,11 +147,11 @@
       <h4 class="bottom-margin-10">Price</h4>
 
       <ul class="list-reseter link-list">
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  Under $25 (100)</label></li>
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  $25-$49 (75)</label></li>
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  $50-$99 (123)</label></li>
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  $100-$149 (78)</label></li>
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  $150-$199 (175)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  Under $25 (100)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  $25-$49 (75)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  $50-$99 (123)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  $100-$149 (78)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  $150-$199 (175)</label></li>
       </ul>
 
       <span class="category-divider">&nbsp;</span>
@@ -159,12 +159,12 @@
       <h4>Special Offers</h4>
 
       <ul class="list-reseter link-list bottom-margin-40">
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  Free Shipping (24)</label></li>
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  On Sale (54)</label></li>
-        <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  Closeouts (12)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  Free Shipping (24)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  On Sale (54)</label></li>
+        <li><label class="checkbox-control"><input type="checkbox" class="cat-filter-options" /><span class="checkmark"></span>  Closeouts (12)</label></li>
       </ul>
 
-      <a href="#" class="gray-link">Clear All Filters</a>
+      <a href="#" class="gray-link clear-all-filter">Clear All Filters</a>
     </aside>
     <!--/left panel-->
 
