--- a/browser.html
+++ b/browser.html
@@ -121,7 +121,7 @@
     </aside>
     <div class="right-panel-column font-size-p-large">
       <h4>Our Story</h4>
-      <p class="bottom-margin-5 w-75 w-md-100">Ellen loves Australia and its people, and right now they need our help. For months, wildfires have been burning across the country in record-breaking heat and strong winds. <br class="hiddem-from-md" /><a href="#">Read More</a></p>
+      <p class="bottom-margin-5 w-75 w-md-100">Ellen loves Australia and its people, and right now they need our help. For months, wildfires have been burning across the country in record-breaking heat and strong winds. <br class="hiddem-from-md" /><a href="#" class="no-underliune">Read More</a></p>
     </div>
   </div>
 
@@ -143,8 +143,8 @@
 
       <span class="category-divider">&nbsp;</span>
 
+      <!-- Price Checlkist-->
       <h4 class="bottom-margin-10">Price</h4>
-
       <ul class="list-reseter link-list">
         <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  Under $25 (100)</label></li>
         <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  $25-$49 (75)</label></li>
@@ -152,16 +152,18 @@
         <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  $100-$149 (78)</label></li>
         <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  $150-$199 (175)</label></li>
       </ul>
+      <!-- /Price Checlkist-->
 
       <span class="category-divider">&nbsp;</span>
 
+      <!-- Special Offers Checlkist-->
       <h4>Special Offers</h4>
-
       <ul class="list-reseter link-list bottom-margin-40">
         <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  Free Shipping (24)</label></li>
         <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  On Sale (54)</label></li>
         <li><label class="checkbox-control"><input type="checkbox" /><span class="checkmark"></span>  Closeouts (12)</label></li>
       </ul>
+      <!-- /Special Offers Checlkist-->
 
       <a href="#" class="gray-link">Clear All Filters</a>
     </aside>
@@ -176,8 +178,14 @@
             <label>Filter</label>
             <select class="form-control">
               <option selected>Filter</option>
-              <option>Filter 1</option>
-              <option>Filter 2</option>
+              <option>Under $25 (100)</option>
+              <option>$25-$49 (75)</option>
+              <option>$50-$99 (123)</option>
+              <option>$100-$149 (78)</option>
+              <option>$150-$199 (175)</option>
+              <option>Free Shipping (24)</option>
+              <option>On Sale (54)</option>
+              <option>Closeouts (12)</option>
             </select>
           </div>
         </div>
@@ -186,9 +194,10 @@
           <div class="form-group">
             <label>Sort by</label>
             <select class="form-control">
-              <option selected>Trending</option>
-              <option>Trending 1</option>
-              <option>Trending 2</option>
+              <option selected>Everything</option>
+              <option>Latest</option>
+              <option>Trending</option>
+              <option>Home &amp; Kitchen</option>
             </select>
           </div>
         </div>
