--- a/product.html
+++ b/product.html
@@ -117,12 +117,12 @@
       <aside class="details-left-panel">
         <div class="clearfix bottom-margin-40 hiddem-from-lg">
           <div id="productThumbOptions" class="v-product-slider">
-            <div class="thumb-series-item content-center-v-h current"><img src="img/product-main.png" alt="" /></div>
-            <div class="thumb-series-item content-center-v-h"><img src="img/product-main.png" alt="" /></div>
-            <div class="thumb-series-item content-center-v-h"><img src="img/product-main.png" alt="" /></div>
-            <div class="thumb-series-item content-center-v-h"><img src="img/product-main.png" alt="" /></div>
-            <div class="thumb-series-item content-center-v-h"><img src="img/product-main.png" alt="" /></div>
-            <div class="thumb-series-item content-center-v-h"><img src="img/product-main.png" alt="" /></div>
+            <div class="thumb-series-item content-center-v-h current"><img src="img/product-main.png" data-thumb="img/product-main.png" alt="" /></div>
+            <div class="thumb-series-item content-center-v-h"><img src="img/browser-item-large.png" data-thumb="img/browser-item-large.png" alt="" /></div>
+            <div class="thumb-series-item content-center-v-h"><img src="img/product-main.png" data-thumb="img/product-main.png" alt="" /></div>
+            <div class="thumb-series-item content-center-v-h"><img src="img/browser-item-large.png" data-thumb="img/browser-item-large.png" alt="" /></div>
+            <div class="thumb-series-item content-center-v-h"><img src="img/product-main.png" data-thumb="img/product-main.png" alt="" /></div>
+            <div class="thumb-series-item content-center-v-h"><img src="img/browser-item-large.png" data-thumb="img/browser-item-large.png" alt="" /></div>
           </div>
           <div class="product-thumb">
             <span class="product-tags right-top">Free Shipping</span>
@@ -203,12 +203,12 @@
       <!--right panel-->
       <div class="details-right-panel">
 
-        <div class="d-flex d-block-md justify-content-between">
-          <div class="bottom-margin-20">
+        <div class="clearfix">
+          <div class="bottom-margin-20 product-title-left">
             <h4 class="product-title font-weight-600">Maui Moisture</h4>
             <div class="price-line">$25.99 <span class="offer">25% off</span><span class="prev-price">$32.99</span></div>
           </div>
-          <h5 class="product-title font-weight-400 bottom-margin-20">25% goes to Charity</h5>
+          <h5 class="charity-percent">25% goes to Charity</h5>
         </div>
 
         <!--product overall rating-->
@@ -267,14 +267,14 @@
           </li>
         </ul>
 
-        <div class="form-inline">
-          <label class="my-1 mr-2">Qty</label>
-          <select class="custom-select m-large my-1 mr-sm-2">
+        <div class="form-inline-custom clearfix">
+          <label class="md-label-absolute">Qty</label>
+          <select class="custom-select m-large">
             <option value="1" selected>1</option>
             <option value="2">2</option>
             <option value="3">3</option>
           </select>        
-          <button type="button" class="btn btn-success m-large">Add to Cart</button>
+          <button type="button" class="btn btn-success m-large inline-cart-btn">Add to Cart</button>
         </div>
 
         <span class="category-divider no-bottom-margin">&nbsp;</span>
