--- a/checkout-collapsed.html
+++ b/checkout-collapsed.html
@@ -34,8 +34,10 @@
   <header id="header">
     <div class="main-nav-outer fixed-top">
       <nav class="navbar justify-content-between main-nav">
-        <button type="button" class="btn btn-link link-color">Secure Checkout</button>
-        <button type="button" class="btn btn-link">Continue Shopping</button>
+        <a class="navbar-brand" href="#">Charity Name</a>
+        <ul class="list-reseter top-middle-nav">
+          <li><a href="#">Continue Shopping</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -259,8 +261,11 @@
                   Keep an eye on your inbox. We’ll send updates to <strong>astrauss@gmail.com</strong>.</p>
                 </div>
 
-                <div class="row hiddem-from-lg">
-                  <div class="col-md-4"><button type="button" class="btn btn-success block btn-lg">Place Order</button></div>
+                <div class="row">
+                  <div class="float-btn-mover col-md-4">
+                    <button type="button" class="btn btn-lg btn-success block">Place Order</button>
+                  </div>
+                  
                 </div>
               </div>
             </div>
@@ -320,12 +325,9 @@
                 </li>
               </ul>
             </div>
-            <div class="grand-total bottom-margin-20">
+            <div class="grand-total">
               Total
               <strong>$36.93</strong>
-            </div>
-            <div class="float-btn-mover">
-              <button type="button" class="btn btn-lg btn-success block">Place Order</button>
             </div>
           </div>
         </aside>
