--- a/charity-creation.html
+++ b/charity-creation.html
@@ -321,10 +321,6 @@
         <div class="modal-body gray-backgruound">
           <form>
             <div class="form-group">
-              <label for="SingInUsername" class="col-form-label">Username:</label>
-              <input type="text" class="form-control" id="SingInUsername">
-            </div>
-            <div class="form-group">
               <label for="SingInEmail" class="col-form-label">Email:</label>
               <input type="email" class="form-control" id="SingInEmail">
             </div>
@@ -332,9 +328,10 @@
               <label for="SingInPassword" class="col-form-label">Password:</label>
               <input type="password" class="form-control" id="SingInPassword">
             </div>
-            <div class="form-group">
-              <label for="SingInConfirmPassword" class="col-form-label">Confirm Password:</label>
-              <input type="password" class="form-control" id="SingInConfirmPassword">
+            <div>
+              <label class="checkbox-control checkbox-in-form">
+                <input type="checkbox">
+                <span class="checkmark"></span> Remember</label>
             </div>
           </form>
         </div>
