--- a/owner.html
+++ b/owner.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" type="text/css" href="css/responsive.css">
 
 </head>
-<body>
+<body class="freezing-menu-static">
 
   <!--mobile main menu-->
   <div class="drawer-menu hiddem-above-lg">
@@ -107,6 +107,15 @@
     </div>
   </div>
   <!--/Swipe menu for mobile-->
+
+  <!--Banner Edit-->
+  <section class="banner-edit-line">
+      <div class="d-flex justify-content-between flex-block-md desktop-view-center">
+        <div>www.causerr.com/shop/[ orginzation-name] <a href="#">Edit</a></div>
+        <div><a href="#" class="preview-link">Preview Shop</a></div>
+      </div>
+  </section>
+  <!--/Banner Edit-->
 
   <!--Banner-->
   <section class="banner content-center-v-h" style="background-image: url(img/banner-owner.png);">
