--- a/product.html
+++ b/product.html
@@ -204,15 +204,18 @@
       <div class="details-right-panel">
 
         <div class="clearfix">
-          <div class="bottom-margin-20 product-title-left">
-            <h4 class="product-title font-weight-600">Maui Moisture</h4>
-            <div class="price-line">$25.99 <span class="offer">25% off</span><span class="prev-price">$32.99</span></div>
-          </div>
-          <h5 class="charity-percent">25% goes to Charity</h5>
+          <h4 class="product-title font-weight-600">Maui Moisture</h4>
+            <div class="price-line">$25.99 
+              <span class="offer">25% off</span>
+              <div class="offer-and-charity">
+                <span class="prev-price">$32.99</span>
+                <span class="charity-percent-inline">25% goes to Charity</span>
+              </div>
+            </div>
         </div>
 
         <!--product overall rating-->
-        <div class="rating bottom-margin-10">
+        <div class="rating bottom-margin-20">
           <span class="fas fa-star star"></span>
           <span class="fas fa-star star"></span>
           <span class="fas fa-star star"></span>
