--- a/checkout-collapsed.html
+++ b/checkout-collapsed.html
@@ -233,10 +233,89 @@
                 <div class="row col-gutter-40">
                   <div class="col-md-6">
                     <label for="CardNumber">Card Number</label>
-                    <input type="text" class="form-control bottom-margin-20" id="CardNumber">
-                    <label class="checkbox-control checkbox-in-form bottom-margin-30">
-                      <input type="checkbox">
-                      <span class="checkmark"></span> Billing address same as Shipping Address</label>
+                    <div class="card-input-bar bottom-margin-20 clearfix">
+                      <span class="input-card-symbol"><i class="far fa-credit-card"></i></span>
+                      <input type="text" class="card-input-fields width-p-50" placeholder="Card Number">
+                      <input type="text" class="card-input-fields width-p-25" placeholder="MM/YY">
+                      <input type="text" class="card-input-fields width-p-25" placeholder="CVV">
+                    </div>
+                  </div>
+                </div>
+                <div><label class="checkbox-control checkbox-in-form bottom-margin-30">
+                  <input type="checkbox" data-toggle='collapse' data-target='#checkoutShippingNotSame' checked>
+                  <span class="checkmark"></span> Billing address same as Shipping Address</label></div>
+                <div class="collapse" id="checkoutShippingNotSame">
+                  <div class="row col-gutter-40">
+                    <div class="col-md-6">
+                      <label for="FirstName">First Name</label>
+                      <input type="text" class="form-control bottom-margin-20" id="FirstName">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="LastName">Last Name</label>
+                      <input type="text" class="form-control bottom-margin-20" id="LastName">
+                    </div>
+                  </div>
+  
+                  <div class="row col-gutter-40 bottom-margin-20">
+                    <div class="col-md-6">
+                      <label for="Company">Company</label>
+                      <input type="text" class="form-control" id="Company">
+                    </div>
+                  </div>
+  
+                  <div class="row col-gutter-40">
+                    <div class="col-md-6">
+                      <label for="StreetAddress">Street Address</label>
+                      <input type="text" class="form-control bottom-margin-20" id="StreetAddress">
+                    </div>
+                    <div class="col-md-6">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <label for="AptSuiteUnit">Apt/Suite/Unit</label>
+                          <input type="text" class="form-control bottom-margin-20" id="AptSuiteUnit">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+  
+                  <div class="row col-gutter-40">
+                    <div class="col-md-6">
+                      <label for="City">City</label>
+                      <input type="text" class="form-control bottom-margin-20" id="City">
+                    </div>
+                    <div class="col-md-6">
+                      <div class="row col-gutter-40 bottom-margin-20">
+                        <div class="col-6">
+                          <label for="State">State</label>
+                          <select class="block" id="State">
+                            <option>Select</option>
+                            <option>State 1</option>
+                            <option>State 2</option>
+                            <option>State 3</option>
+                          </select>
+                        </div>
+                        <div class="col-6">
+                          <label for="Zip">Zip</label>
+                          <input type="text" class="form-control" id="Zip">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+  
+                  <div class="row col-gutter-40">
+                    <div class="col-md-6">
+                      <label for="Country">Country</label>
+                      <input type="text" class="form-control bottom-margin-20" id="Country">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="Phone">Phone</label>
+                      <input type="text" class="form-control bottom-margin-20" id="Phone">
+                    </div>
+                  </div>
+                  <div class="row col-gutter-40 bottom-margin-20">
+                    <div class="col-md-6">
+                      <p>Currnetly, we are able to ship to the continental United States</p>
+                    </div>
                   </div>
                 </div>
                 <div class="inline-elements">
